# long_TranslateSoftware

./: BUILD_GUIDE.md  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  i18n.ts  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  ocr.rs  tray.rs
src/components/: Dashboard.tsx  FloatingWindow.tsx  OcrOverlay.tsx
src/services/: api.ts  wordbook.ts
