[package]
name = "long-trans"
version = "0.1.0"
description = "胧翻译 · 智能助手"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_trans_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-clipboard-manager = "2.0.0"
tauri-plugin-autostart = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-log = "2.0.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
arboard = "3.4"
base64 = "0.22"
screenshots = "0.8"
enigo = "0.2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.10"
hex = "0.4"
ort = "2.0.0-rc.9"
ndarray = "0.15"
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"
aes-gcm = "0.10.3"
tauri-plugin-dialog = "2.0.0-rc.3"

[dependencies.windows]
version = "0.58"
features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Win32_Graphics_Gdi",
    "Foundation",
]
